--- a/astral_frontend/src/pages/Login.css
+++ b/astral_frontend/src/pages/Login.css
@@ -6,5 +6,11 @@ body {
     border-radius: 30px;
 }
 .inlineInput {
-    width: 75%;
+    width: 48%;
+}
+.regLink {
+    color: grey;
+}
+.regLink:hover {
+    text-decoration: none;
 }
